# Software_Engineering

./: README.md
calculator-middleware-cpp/: CMakeLists.txt  config.h  main.cpp  validator.h
demo_calculate/: calculate.py  calculate_demo.py  calculate_flask.py  documentation.md
python_calculate/: README.md  calculate.py  calculate_flask.py
vue-calculator-master/: README.md  package-lock.json  package.json  前端部分.md  版本更新日志.md
vue-calculator-master/src/: index.partial.html  index.template.html  script.js  style.css
vue-calculator-master/src/api/: sendEquation.js
vue-calculator-master/src/utils/: request.js
